# kent_control_flow

./: CMakeLists.txt  README.md  output.dot
dot/: cmd.txt  example.dot
files/: api.h  output.txt  output_only_one_block.txt
include/: control_flow.h  dot.h  dot_graph.h  error.h  file.h  label.h  old_path.h  pattern.h  utils.h
input_files/: keep.txt
src/: block.c  block_controller.c  dump_models.c  label.c  main.c  old_path.c  optimize_tree.c  parser.c  pattern.c  read_file.c  read_input.c  subblock.c  utils.c
src/dot/: dot_block.c  dot_blocks.c  dot_dump.c  dot_graph.c  dot_link.c  dot_links.c  old_dot_block.s.c
